TeXstudio 4.1.2
-----------------
- allow resizing the different sections in the symbol widget 
- fix automatic session restore on OSX/Qt6

TeXstudio 4.1.1
-----------------
- fix weird OSX issue that cursor keys were not working
- allow maximise config dialog 

TeXstudio 4.1.0
-----------------
- change session format to json in order to circumvent OSX/Qt6 issue
- fix input box for chinese (#1896)
- fix update of pdf fit to text width (#1935)
- make edview accessible from js

TeXstudio 4.0.4
-----------------
- use QT6.2.1 on OSX, fix crash when checking for updates, fix restoring last session
- better pdf font substitution on windows (#1812)
- fix placing cursor for large fonts (#1908)
- more cwls

TeXstudio 4.0.3
-----------------
- fix linewidth calculation in Qt6
- fix crash on load/new doc (under unknown,system specific circumstances)
- remove placeholder quicker
- more cwls 

TeXstudio 4.0.2
-----------------
- fix structure view (inlcudes and cursor marking, #1828) 
- fix completer tooltip on bibids (#1835)
- OSX: fix "slanted" cursor (#1836)
- more cwls


TeXstudio 4.0.1
-----------------
- add more cwls
- fix pdfviewer page display
- build OSX with QT6.2, fix special charcters entry (alt+n + n , etc.) (#1770)
- activate crash handler on win again
- fix strcuture detection for included files
 

TeXstudio 4.0.0
-----------------
- adapt to Qt6/poppler-qt6
- OSX/win build provided with Qt6
- remodel structure handling in order to avoid (rare) crashes
- more and updated completion word lists thanks to mbertucci47
- handle text (e.g. \text{text}) in mathenv as text with spell checking
- performance improvement for large files with large number of labels and/or large number of includes
- fix that search options are persistant
- automatic structure scrolling can be turned off (#1742)
- some bug fixes


TeXstudio 3.1.2
-----------------
- completed global TOC (background color coded, can be adjusted in config)
- fontawesome5 symbol pane