@@ -46,11 +46,16 @@
   <content_rating type="oars-1.1"/>
   <update_contact>texstudio-list_at_lists.sourceforge.net</update_contact>
   <releases>
-    <release date="2021-11-27T12:25:10+0000" version="4.1.2">
+    <release date="2021-12-05T10:22:23+0000" version="4.1.2">
       <description>
         <ul>
           <li>allow resizing the different sections in the symbol widget </li>
           <li>fix automatic session restore on OSX/Qt6</li>
+          <li>scale inline preview if visible linewidth is too small</li>
+          <li>fix latex package name parsing on Qt5 builds</li>
+          <li>added cwls</li>
+          <li>Use Qt 6.2.2 on Win and OSX (fixes ctrl+letter shortcut issue on OSX)</li>
+          <li>fix file restore on OSX</li>
         </ul>
       </description>
     </release>
